fix: further spacing bug on index.html and contact.html CTA boxes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- End of hero image -->
 
         <!--CTA section x 2 -->
-    <section class="container appear-second" id="cta-section">
+    <section class="container appear-second max-width-reduce" id="cta-section">
         <div class="row">      
            
             <div class="col-md-1 d-none d-md-block"></div>
