--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,10 @@
  
         <!-- Contact information -->
 
-    <section class="container cta appear-second" id="contact-info-outer">
+    <section class="container cta appear-second max-width-reduce" id="contact-info-outer">
         <div class="row cta-content">
-            <div class="col-12" id="contact-info-content">
+            <div class="col d-sm-none"></div>
+            <div class="col-10 col-sm-12" id="contact-info-content">
                 <h3><em>General Enquiries</em></h3>
                 <p>littleparadise.bri@gmail.com</p>
                 <br>
@@ -74,6 +75,7 @@
                 <h3><em>Bookings</em></h3>
                 <p>bookings.littleparadise@gmail.com</p>
             </div>
+            <div class="col d-sm-none"></div>
         </div>
 
     </section>
@@ -82,7 +84,7 @@
         
         <!-- Mailing list sign-up -->
         
-    <section class="container appear-second cta" id="email-form">
+    <section class="container appear-second cta max-width-reduce" id="email-form">
         <form>
             <h3>Join Our Mailing List!</h3>
             <div class="mb-3">
