style: music section on index.html with paddin and add hr to break page up

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
                     <h2>HAPPY LANE EP</h2>
-                    <a class="btn btn-primary btn-lg" href="#" role="button" target="_blank">Buy Now</a>
+                    <a class="btn btn-primary btn-lg" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank">Buy Now</a>
                 </div>
             </div>
 
@@ -96,14 +96,17 @@
     </section>
         <!--End of CTA section -->
 
-    <section class="container">
+    <hr>
+
+    <section class="container" id="index-music">
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
+                <div class="col-lg-8 youtube-iframe"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
                 <div class="col-lg-2"></div>
             </div>
     </section>
 
+    <hr>
         <!-- Tour dates -->
     <section class="container" id="tour-dates">
         <h3 id="tour-header">Tour Dates</h3>
