style: gallery to be responsive across screen sizes

--- a/gallery.html
+++ b/gallery.html
@@ -60,17 +60,45 @@
     </header>
 
         <h1 class="appear-first">Gallery</h1>
-        <section id="photo">
-            <img src="assets/images/littleparadise.jpg" alt="">
-            <img src="assets/images/littleparadise2.jpg" alt="">
-            <img src="assets/images/littleparadise3.jpg" alt="">
-            <img src="assets/images/littleparadise4.jpg" alt="">
-            <img src="assets/images/littleparadise5.jpg" alt="">
-            <img src="assets/images/littleparadise6.jpg" alt="">
-            <img src="assets/images/littleparadise7.jpg" alt="">
-            <img src="assets/images/littleparadise8.jpg" alt="">
-            <img src="assets/images/littleparadise9.jpg" alt="">
-            <img src="assets/images/littleparadise10.jpg" alt="">
+        <section id="gallery" class="container-fluid appear-second">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/hero-placeholder.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise10.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise2.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise3.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise4.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise5.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise6.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise7.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise8.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise9.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                    <img src="assets/images/littleparadise9.jpg" alt="">
+                </div>
+            </div>
         </section>
  
         <!-- Footer -->
