fix: bug on hero image sizing by using bootstrap grid

--- a/index.html
+++ b/index.html
@@ -68,8 +68,17 @@
     </header>
 
     <!-- Hero image -->
-    <section class="appear-first" id="hero-outer">
-        <div id="hero-image"></div>
+    <section class="appear-first container-fluid">
+        <div class="row">
+
+            <div class="col-md-1 d-none d-md-block col-lg-2"></div>
+
+            <div class="col-12 col-md-10 col-lg-8" id="hero-outer">
+                <img src="assets/images/hero-image-min.jpg" alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
+            </div>
+
+            <div class="col-md-1 d-none d-md-block col-lg-2"></div>
+        </div>
     </section>
     <!-- End of hero image -->
 
@@ -104,7 +113,7 @@
 
     <hr>
 
-    <section class="container" id="index-music">
+    <section class="container appear-third" id="index-music">
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8 youtube-iframe"><iframe id="youtube-iframe"
