amend: images to contain .img bootstrap class

--- a/gallery.html
+++ b/gallery.html
@@ -66,37 +66,37 @@
                     <img src="assets/images/littleparadise.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/hero-placeholder.jpg" alt="">
+                    <img src="assets/images/hero-placeholder.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise10.jpg" alt="">
+                    <img src="assets/images/littleparadise10.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise2.jpg" alt="">
+                    <img src="assets/images/littleparadise2.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise3.jpg" alt="">
+                    <img src="assets/images/littleparadise3.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise4.jpg" alt="">
+                    <img src="assets/images/littleparadise4.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise5.jpg" alt="">
+                    <img src="assets/images/littleparadise5.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise6.jpg" alt="">
+                    <img src="assets/images/littleparadise6.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise7.jpg" alt="">
+                    <img src="assets/images/littleparadise7.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise8.jpg" alt="">
+                    <img src="assets/images/littleparadise8.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise9.jpg" alt="">
+                    <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise9.jpg" alt="">
+                    <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid">
                 </div>
             </div>
         </section>
