--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <section class="appear-first container-fluid">
         <div class="row">
 
-            <div class="col-md-1 d-none d-md-block col-lg-2"></div>
+            <div class="col-md-1 d-none d-md-block col-xl-2"></div>
 
-            <div class="col-12 col-md-10 col-lg-8" id="hero-outer">
+            <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
                 <img src="assets/images/hero-image-min.jpg" alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
             </div>
 
-            <div class="col-md-1 d-none d-md-block col-lg-2"></div>
+            <div class="col-md-1 d-none d-md-block col-xl-2"></div>
         </div>
     </section>
     <!-- End of hero image -->
