add: background image to music page

--- a/music.html
+++ b/music.html
@@ -59,6 +59,8 @@
     <!-- End of navbar --> 
     </header>
 
+
+    <div class="hero-bg">
     <h1 class="appear-first">Music</h1>
     
     <!-- Embedded SoundCloud playlist section -->
@@ -108,7 +110,7 @@
         </div>
 
     </section>
-
+    </div>
     <!-- End of available releases section -->
  
     <!-- Footer -->
