add: responsive design to images and content at smaller screen sizes

--- a/about.html
+++ b/about.html
@@ -66,15 +66,14 @@
 
     <h1 class="appear-first">About</h1>
 
-    <section class="container">
-        <!-- <div class="row">
-            <div class="col">
-                <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
-            </div>
-        </div> -->
+    <section class="container appear-second" id="about-section">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <article class="appear-second">
+            <div class="col-lg-7">
+                <img src="assets/images/littleparadise.jpg" alt="" class="img-fluid about-image">
+                <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid dissapear about-image"> 
+            </div>
+            <div class="col-lg-5">
+                <article>
                     <p>Little Paradise are an indie rock band from Bristol comprising of two hip twenty-somethings: Mike
                         Kilcooley and Francis Kershaw.</p>
                     <p>
@@ -105,12 +104,9 @@
                     </aside>
 
                 </article>
-            </div>
-            <div class="col-12 col-md-6">
-                <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid appear-third">
-            </div>
-            <div class="col-12 col-md-6 offset-md-6">
-                <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid appear-third">
+            </div>       
+            <div class="col d-lg-none d-md-block">
+                <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid about-image">   
             </div>
         </div>
     </section>
