fix: spacing bug and minor copy amends

--- a/about.html
+++ b/about.html
@@ -78,8 +78,8 @@
                         Kilcooley and Francis Kershaw.</p>
                     <p>
                         Formed during the closing months of 2019, the band mixes dueling electric guitars with
-                        aggressive drums, recording all tracks from a small DIY bedroom studio in Southville.
-                        In the band's own words, their music can be best described as a sincere yet futile attempt
+                        aggressive drums, and record all of their songs from a small DIY bedroom studio in Southville.
+                        In the band's own words, their sound can be described as a sincere yet futile attempt
                         to pretend that music fans still like early Bloc Party or Foals as much as they do.
                     </p>
                     <p>
@@ -92,8 +92,9 @@
                         and pray that people will soon feel the same nostalgia for the noughties that is inexplicably
                         directed towards the 80s and 90s. 
                         The moment those warm delusional nostalgia goggles move from Stranger Things episodes to 
-                        overcrowded, sweaty festival tents, the band intends on aggressively cashing out.
+                        overcrowded, sweaty festival tents, the band intends on aggressively cashing in.
                     </p>
+                    <hr>
                     <aside>
                         <p><em>If you'd like to get in touch with the band for any reason at all, be it for potential gig
                         opportunities, collaborations or just to say something nice, you can find contact details <a
