--- a/contact.html
+++ b/contact.html
@@ -63,21 +63,31 @@
  
         <!-- Contact information -->
 
-    <section class="container cta appear-second max-width-reduce" id="contact-info-outer">
-        <div class="row cta-content">
-            <div class="col d-sm-none"></div>
-            <div class="col-10 col-sm-12" id="contact-info-content">
-                <h3><em>General Enquiries</em></h3>
-                <p>littleparadise.bri@gmail.com</p>
-                <br>
-                <hr>
-                <br>
-                <h3><em>Bookings</em></h3>
-                <p>bookings.littleparadise@gmail.com</p>
-            </div>
-            <div class="col d-sm-none"></div>
-        </div>
+    <section class="container appear-second max-width-reduce">
+        <div class="row">
 
+            <!-- <div class="col-md-1 d-none d-md-block"></div> -->
+
+            <div class="col-12 col-md-5 cta contact-info">
+                <div class="cta-content">
+                    <h2><em>Enquiries</em></h2>
+                    <hr>
+                    <p class="email-address"><em>littleparadise.bri@gmail.com</em></p>
+                </div>
+            </div>
+
+            <div class="col-md-2 d-none d-md-block"></div>
+
+            <div class="col-12 col-md-5 cta contact-info">
+                <div class="cta-content">
+                    <h2>Bookings</h2>
+                    <hr>
+                    <p class="email-address">littleparadise.bri@gmail.com</p>
+                </div>
+            </div>
+
+            <!-- <div class="col-md-1 d-none d-md-block"></div> -->
+        </div>
     </section>
 
         <!-- End of contact information -->
@@ -85,8 +95,8 @@
         <!-- Mailing list sign-up -->
         
     <section class="container appear-second cta max-width-reduce" id="email-form">
-        <form>
-            <h3>Join Our Mailing List!</h3>
+        <form method="post" action="#">
+            <h3>Join Our Mailing List! <i class="fas fa-envelope-open-text"></i></h3>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" name="name">
@@ -96,7 +106,7 @@
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
             </div>
             
-            <a class="btn btn-primary btn-lg" href="contact.html" role="button" id="email-button">Sign Up</a>
+            <button type="submit" class="btn btn-primary btn-lg" id="email-button">Sign Up</button>
         </form>
 
     </section>
