add: font awesome icons to CTAs

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
             <div class="col-12 col-md-5 cta contact-info">
                 <div class="cta-content">
-                    <h2>Bookings</h2>
+                    <h2><em>Bookings</em></h2>
                     <hr>
                     <p class="email-address">littleparadise.bri@gmail.com</p>
                 </div>
