--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
-                    <h2>HAPPY LANE EP</h2>
+                    <h2>HAPPY LANE EP <i class="fas fa-record-vinyl"></i></h2>
                     <a class="btn btn-primary btn-lg" href="http://www.oddsocksband.bandcamp.com/" role="button"
                         target="_blank">Buy Now</a>
                 </div>
@@ -100,7 +100,7 @@
 
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
-                    <h2>EMAIL UPDATES</h2>
+                    <h2>EMAIL UPDATES <i class="fas fa-envelope-open-text"></i></h2>
                     <a class="btn btn-primary btn-lg" href="contact.html" role="button">Sign Up</a>
                 </div>
             </div>
